--- a/class.css
+++ b/class.css
@@ -14,6 +14,12 @@
     border: 2px solid white;
     background-image: url("header.jpg");
 }
+.flex-container{
+  color:#ffffff
+    text-align: center;
+    border: 2px solid white;
+}
+  
 
 .body {
     width: 600px;
