--- a/class.css
+++ b/class.css
@@ -6,7 +6,7 @@
     color: whitesmoke;
     text-align: center;
     border: 5px solid black;
-    background-color: black;
+    background-color: black !important;
 }
 .mainHeader {
     color:#ffffff
