--- a/class.css
+++ b/class.css
@@ -19,6 +19,13 @@
     text-align: center;
     border: 2px solid white;
 }
+div.fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border: 3px solid #73AD21;
+}
   
 
 .body {
