--- a/class.css
+++ b/class.css
@@ -26,6 +26,11 @@ div.fixed {
   width: 300px;
   border: 3px solid #73AD21;
 }
+div.relative {
+  position: relative;
+  left: 30px;
+  border: 3px solid #73AD21;
+}
   
 
 .body {
