--- a/class.css
+++ b/class.css
@@ -31,7 +31,12 @@ div.relative {
   left: 30px;
   border: 3px solid #73AD21;
 }
-  
+  img {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+}
 
 .body {
     width: 600px;
