--- a/class.css
+++ b/class.css
@@ -49,12 +49,8 @@ div.relative {
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
-  .beginEventually, what is learned from web browser development can be used by front-end developers to craft code for environments that are not fueled by a browser engine. As of late, development environments are being dreamed up that use web technologies (e.g., CSS and JavaScript), without web engines, to create native applications.
-
-  Some examples of these environments are:
-  
-  Flutter
-  React Native{
+  .begin
+{
     margin: 16;
     padding: 20px 0;
     color: #00539f;
